# dvt-operator-sidecar

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ssv.py  ssv_key_shares.py
.github/workflows/: ci.yaml  docker.yaml
src/: _vulture_whitelist.py  app.py  conftest.py  setup_database.py  startup_checks.py
src/checkpoints/: database.py
src/checkpoints/tests/: test_database.py
src/common/: clients.py  contracts.py  database.py  setup_logging.py  tasks.py  utils.py
src/common/abi/: ISSVRegistry.json
src/config/: networks.py  settings.py
src/db_version/: database.py
src/db_version/tests/: test_database.py
src/exits/: relayer.py  tasks.py
src/exits/keystores/: local.py
src/ssv_operators/: database.py  typings.py
src/validators/: relayer.py  tasks.py  typings.py
src/validators/keystores/: base.py  exceptions.py  load.py  local.py  obol.py  obol_remote.py  remote.py  ssv.py  ssv_api.py  typings.py
